tests/ui/rfcs/rfc-2632-const-trait-impl/assoc-type-const-bound-usage.stderr
error[E0308]: mismatched types
  --> $DIR/assoc-type-const-bound-usage.rs:12:5
   |
LL |     <T as Foo>::Assoc::foo();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ expected `host`, found `true`
   |
   = note: expected constant `host`
              found constant `true`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
